Fixed map alignment

--- a/styling/Contact.css
+++ b/styling/Contact.css
@@ -101,6 +101,9 @@ h3.mapDesc {
 
 #map {
   align-content: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 100px;
   border-radius: 10px 0px 0px 10px;
 }
